--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cssnano": "^4.1.10",
     "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "json-loader": "^0.5.7",
     "less": "^3.9.0",
     "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.12.0",
